--- a/2020/Fall/System Programming Lab/week3/Makefile
+++ b/2020/Fall/System Programming Lab/week3/Makefile
@@ -1,15 +1,16 @@
 # Makefile
 CXX=gcc
+CXXFLAGS=-w
 TARGET=output
 OBJECTS=main.o plus.o minus.o
 
 $(TARGET): $(OBJECTS)
-	$(CXX) -o $@ $^
+	$(CXX) $(CXXFLAGS) -o $@ $^
 main.o: main.c
-	$(CXX) -c $^
+	$(CXX) $(CXXFLAGS) -c $^
 plus.o: plus.c
-	$(CXX) -c $^
+	$(CXX) $(CXXFLAGS) -c $^
 minus.o: minus.c
-	$(CXX) -c $^
+	$(CXX) $(CXXFLAGS) -c $^
 clean:
 	rm $(OBJECTS) $(TARGET)
